Deployments/suex-enginfprojects-acpt/k8s-manifests/deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: suex-enginfprojects-acpt
  labels:
    app.kubernetes.io/name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webapp
    spec:
      containers:
        - name: webapp
          image: mpsproject/webapp:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.1"
          ports:
            - containerPort: 5000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - name: local-config
              mountPath: /mpsproject/app/instance/local.py
              subPath: local.py
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 3
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: local-config
          configMap:
            name: configmap-local
      restartPolicy: Always
