Deployments/suex-enginfprojects-acpt/k8s-manifests/deploy-celery-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-scheduler
  namespace: suex-enginfprojects-acpt
  labels:
    app.kubernetes.io/name: celery-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: celery-scheduler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: celery-scheduler
    spec:
      containers:
        - name: webapp
          image: mpsproject/webapp:latest
          imagePullPolicy: IfNotPresent
          command: ["./launch_beat.sh"]
          resources:
            requests:
              cpu: "0.1"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - name: local-config
              mountPath: /mpsproject/app/instance/local.py
              subPath: local.py
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: local-config
          configMap:
            name: configmap-local
      restartPolicy: Always
