Deployments/suex-enginfprojects-acpt/k8s-manifests/deploy-default-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-worker
  namespace: suex-enginfprojects-acpt
  labels:
    app.kubernetes.io/name: default-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: default-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: default-worker
    spec:
      containers:
        - name: mpsproject
          image: quay.io/ds283/mpsproject:latest
          imagePullPolicy: Always
          command: ["./launch_celery.sh"]
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.5"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - name: local-config
              mountPath: /mpsproject/app/instance/local.py
              subPath: local.py
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: local-config
          configMap:
            name: configmap-local
      restartPolicy: Always
