Deployments/suex-enginfprojects-acpt/k8s-manifests/deploy-mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: suex-enginfprojects-acpt
  labels:
    app.kubernetes.io/name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.2"
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /data/models
              name: mount-mongodb-data
      volumes:
        - name: mount-mongodb-data
          persistentVolumeClaim:
            claimName: pvc-mongodb-data
      restartPolicy: Always
