Deployments/suex-enginfprojects-acpt/k8s-manifests/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: suex-enginfprojects-acpt
  labels:
    app.kubernetes.io/name: webapp
spec:
  selector:
    app.kubernetes.io/name: webapp
  type: ClusterIP
  ports:
    - port: 5000
