Deployments/suex-enginfprojects-acpt/k8s-manifests/service-celery-dashboard.yml
apiVersion: v1
kind: Service
metadata:
  name: celery-dashboard
  namespace: suex-enginfprojects-acpt
  labels:
    app.kubernetes.io/name: celery-dashboard
spec:
  selector:
    app.kubernetes.io/name: celery-dashboard
  type: ClusterIP
  ports:
    - port: 5000
