Deployments/suex-enginfprojects-acpt/k8s-manifests/service-mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: suex-enginfprojects-acpt
  labels:
    app.kubernetes.io/name: mariadb
spec:
  selector:
    app.kubernetes.io/name: mariadb
  type: ClusterIP
  ports:
    - port: 3306
