Deployments/suex-enginfprojects-acpt/k8s-manifests/ingress-default.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  namespace: suex-enginfprojects-acpt
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
      - acceptance.enginfprojects.inf.susx.ac.uk
      secretName: ingress-cert
  rules:
    - host: acceptance.enginfprojects.inf.susx.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 5000
